--- a/header/index.html
+++ b/header/index.html
@@ -1,25 +1,18 @@
 <!doctype html>
 <html lang="en" class="h-100" data-bs-theme="auto">
   <head><script src="js/color-modes.js"></script>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title>Mart</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-
-<link href="dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <style>
-
-
-    </style>
-
-    <!-- Custom styles for this template -->
+    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="cover.css" rel="stylesheet">
   </head>
+
   <body class="d-flex h-100 text-center text-bg-dark">
+
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
@@ -43,7 +36,7 @@
       <br>
       <br>
       <br>
-      <a href="https://ylla.xyz" class="btn btn-lg btn-dark fw-oblique border-dark bg-dark w-10">Learn more</a>
+      <a href="../projects/projects.html" class="btn btn-lg btn-dark fw-oblique border-dark bg-dark w-10">Learn more</a>
     </p>
   </main>
 
@@ -52,7 +45,9 @@
     </a>.</p>
   </footer>
 </div>
+
 <script src="dist/js/bootstrap.bundle.min.js.map"></script>
 
-    </body>
+  </body>
+
 </html>
