--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="cover.css" rel="stylesheet">
+    <link href="home.css" rel="stylesheet">
   </head>
 
   <body class="d-flex h-100 text-center text-bg-dark">
@@ -36,7 +36,7 @@
       <br>
       <br>
       <br>
-      <a href="../projects/projects.html" class="btn btn-lg btn-dark fw-oblique border-dark bg-dark w-10">Learn more</a>
+      <a href="/projects.html" class="btn btn-lg btn-dark fw-oblique border-dark bg-dark w-10">Learn more</a>
     </p>
   </main>
 
