--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="home.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
   </head>
 
   <body class="d-flex h-100 text-center text-bg-dark">
