--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </footer>
 </div>
 
-<script src="/home_a dist/js/bootstrap.bundle.min.js.map"></script>
+<script src="/dist/js/bootstrap.bundle.min.js.map"></script>
 
   </body>
 
